restored -XX:-UseBiasedLocking option